--- a/pro06.html
+++ b/pro06.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <form action="pro06.php" method="post">
         <center> <b> Notas clase 123</b></center>
@@ -13,8 +15,11 @@
         <input type="number" id="mate" name="txt_numero1"><br><br>
         <label for="comu">Ingrese la nota de comunicacion</label>
         <input type="number" id="comu" name="txt_numero2"><br><br>
+        <label for="ingl">Ingrese la nota de Ingles</label>
+        <input type="number" id="ingles" name="txt_numero3"><br><br>
         <input type="submit" value="enviar">
 
-    
+
 </body>
+
 </html>
